Fix layout bug (#69)

--- a/hallway-dashboard-fe/src/component/Weather/WeatherBar.module.css
+++ b/hallway-dashboard-fe/src/component/Weather/WeatherBar.module.css
@@ -3,14 +3,16 @@
 	height: 16vh;
 }
 
-.main div {
+.weatherContainer {
+	height: 85%;
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	box-sizing: border-box;
 }
 
 .weatherAttribution {
-	padding: 4px 10px;
+	padding: 4px 20px;
 	display: flex;
 	justify-content: flex-end;
 	font-size: .8em;
